[package]
name = "orbits"
version = "0.1.0"
license = "MIT"
authors = ["Ricky Taylor <rickytaylor26@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.40.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.78.0"
chunked = { path = "../../packages/chunked" }
futures = "0.3.14"
async-trait = "0.1.30"
tokio = { version = "1.5.0", features = ["full"] }
rand = "0.8.3"
rayon = "1.5.0"
